fix(style): fix checkbox spacing for tree

--- a/packages/veui-theme-dls/components/tree.less
+++ b/packages/veui-theme-dls/components/tree.less
@@ -62,6 +62,10 @@
       display: block;
     }
 
+    &-check {
+      margin-right: @dls-tree-node-content-spacing;
+    }
+
     // 如果前面没有图标，就把图标位置让出来。
     &-check:first-child,
     &-label:first-child {
